--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
 <html>
   <body>
     <p> Hello. I might put something here. This only exists to help me practice making sites with HTML and CSS. </p>
+    
+    <div id="gradient"/>
   </body>
 </html>
