--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
   <body>
     <p> Hello. I might put something here. This only exists to help me practice making sites with HTML and CSS. </p>
     
-    <div id="gradient"/>
+    <div id="gradient"> </div>
   </body>
 </html>
