--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link rel="stylesheet" href="home.css">
+  </head>
+  
   <body>
     <p> Hello. I might put something here. This only exists to help me practice making sites with HTML and CSS. </p>
     
