--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   
   <body>
-    <p> Hello. I might put something here. This only exists to help me practice making sites with HTML and CSS. </p>
+    <p> Hello. I might put something here. This only exists to help me practice making sites with HTML and CSS. Feel free to look at what's here. </p>
     
     <div id="gradient"> </div>
   </body>
