--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <p> Hello. I might put something here. This only exists to help me practice making sites with HTML and CSS. Feel free to look at what's here. </p>
     
     <div id="gradient"> </div>
+    <div class="primary> </div>
   </body>
 </html>
