--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   
   <body>
     <p> Hello. I might put something here. This only exists to help me practice making sites with HTML and CSS. Feel free to look at what's here. </p>
-    
+    <hr>
+    <p><a href="https://www.learn-html.org/" target="_blank">Learn HTML</a></p>
     <div id="gradient"> </div>
     <div class="primary> </div>
   </body>
